--- a/starter/backend/serverless.yml
+++ b/starter/backend/serverless.yml
@@ -74,6 +74,21 @@ CreateTodo:
       - http:
           method: patch
           path: todos/{todoId}
+          cors: true
+          authorizer: Auth
+          request:
+            schemas:
+              application/json: ${file(src/validator/update-validator.json)}
+    iamRoleStatementsInherit: true
+    iamRoleStatements:
+      - Effect: Allow
+        Action: "dynamodb:UpdateItem"
+        Resource: "arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.TODOS_TABLE}"
+      - Effect: "Allow"
+        Action:
+          - "xray:PutTraceSegments"
+          - "xray:PutTelemetryRecords"
+        Resource: "*"
 
   # TODO: Configure this function
   DeleteTodo:
