add delete todo config

--- a/starter/backend/serverless.yml
+++ b/starter/backend/serverless.yml
@@ -91,12 +91,25 @@ CreateTodo:
         Resource: "*"
 
   # TODO: Configure this function
-  DeleteTodo:
-    handler: src/lambda/http/deleteTodo.handler
-    events:
-      - http:
-          method: delete
-          path: todos/{todoId}
+DeleteTodo:
+  handler: src/lambda/http/deleteTodo.handler
+  events:
+    - http:
+        method: delete
+        path: todos/{todoId}
+        cors: true
+        authorizer: Auth
+  iamRoleStatementsInherit: true
+  iamRoleStatements:
+    - Effect: Allow
+      Action: "dynamodb:DeleteItem"
+      Resource: "arn:aws:dynamodb:${self:provider.region}:${aws:accountId}:table/${self:provider.environment.TODOS_TABLE}"
+    - Effect: "Allow"
+      Action:
+        - "xray:PutTraceSegments"
+        - "xray:PutTelemetryRecords"
+      Resource:
+        - "*"
 
   # TODO: Configure this function
   GenerateUploadUrl:
