--- a/starter/client/.env
+++ b/starter/client/.env
@@ -1,3 +1,3 @@
 REACT_APP_AUTH0_DOMAIN=dev-ymef3nb010c4irje.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=oeyrGrUdeeO1D8MBz5aYMcxiDDfzU9ER
-REACT_APP_API_ENDPOINT=...
+REACT_APP_API_ENDPOINT=https://gyg3chnmw1.execute-api.us-east-1.amazonaws.com/dev
